Added nasm link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 </head>
 <body>
   <header>
-    <p>It works!</p>
+    <h1>Adam's dev stuff!</h1>
+	<h2>Code!</h2>
+	<hr />
   </header>
+  <main>
+	<section>
+		<h2>Tutorials</h2>
+			<p>
+				<b>NASM</b>
+				Assembly programming for linux using NASM.
+				</p>
 </body>
 </html>
