Update all the things

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <header>
-    <h1>Adam's dev stuff!</h1>
+    <h1><a href="https://fireug.github.io">Adam's dev stuff!</a></h1>
 	<h2>Code!</h2>
 	<hr />
   </header>
