--- a/tutorials/nasm/index.html
+++ b/tutorials/nasm/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header>
-		<h1 style="display:inline;">Adam's dev stuff!</h1><span>/tutorials/nasm/</span>
+		<h1 style="display:inline;"><a href="https://fireug.github.io">Adam's dev stuff!</a></h1><span>/<a href="https://fireug.github.io/tutorials/">tutorials</a>/<a href="https://fireug.github.io/tutorials/nasm/">nasm</a>/</span>
 		<h2>Linking!</h2>
 		<hr />
 	</header>
